--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,50 @@
-# Dependencies
-node_modules/
-/.pnp
-.pnp.js
-
-# Testing
-/coverage
-
-# Production
-/build
-/dist
-
-# Environment files
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 .env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+project/myenv/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# IDE
+# IDEs and editors
 .idea/
 .vscode/
 *.swp
 *.swo
-
-# OS
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
-# ML Models
-*.bin
-*.h5
-*.pkl
-*.model
-*.pt
-
-# Large files
-*.zip
-*.tar.gz
-*.rar
-
-# Temporary files
-*.tmp
-*.temp
-*.bak
-
-models/tinyllama-1.1b-chat-v1.0.Q4_K_M.gguf
+# Project specific
 models/tinyllama-1.1b-chat-v1.0.Q4_K_M.gguf
